# agile-cpp

./: CMakeLists.txt  Readme.md
org.eclipse.agail.Adele-NEXT/conf/: idm-entity-storage-conf.json
org.eclipse.agail.Adele-NEXT/src/: CMakeLists.txt  conversation.cpp  fionaclient.cpp  fionaclient.h  httpcookiesession.cpp  httpcookiesession.h  inaudiostream.cpp  inaudiostream.h  outaudiostream.cpp  outaudiostream.h
org.eclipse.agail.Adele-NEXT/src/utils/: createFionaDbEntry.cpp
org.eclipse.agail.Device/src/: CMakeLists.txt
org.eclipse.agail.Device/src/base/: DeviceImp.cpp  DeviceImp.h
org.eclipse.agail.Device/src/instance/: Microphone.cpp  Microphone.h  Speaker.cpp  Speaker.h  TestDevice.cpp  TestDevice.h
org.eclipse.agail.DeviceCaller/src/: CMakeLists.txt
org.eclipse.agail.DeviceCaller/src/base/: DeviceCaller.cpp  DeviceCaller.h
org.eclipse.agail.DeviceCaller/src/instance/: MicrophoneCaller.cpp  MicrophoneCaller.h  SpeakerCaller.cpp  SpeakerCaller.h  TestDeviceCaller.cpp  TestDeviceCaller.h
org.eclipse.agail.IdmEntityStorage/src/: CMakeLists.txt  EntityConnectionPool.cpp  EntityConnectionPool.h  LevelStorage.cpp  LevelStorage.h  Storage.cpp  Storage.h
org.eclipse.agail.test/conf/: idm-entity-storage-conf.json
org.eclipse.agail.test/src/: CMakeLists.txt  testAudioClient.cpp  testAudioServer.cpp  testClient.cpp  testEntityConnectionPool.cpp  testLevelStorage.cpp  testMicrophoneClient.cpp  testMicrophoneServer.cpp  testServer.cpp  testSpeakerClient.cpp  testSpeakerServer.cpp  testStorage.cpp
org.eclipse.agail/src/: CMakeLists.txt  Device.cpp  Device.h
org.eclipse.agail/src/object/: AbstractAgileObject.cpp  AbstractAgileObject.h  AgileObjectInterface.h  DeviceComponent.h  DeviceDefinition.h  RecordObject.h
