add_executable (conversation conversation.cpp)
add_executable (createFionaDbEntry utils/createFionaDbEntry.cpp)
add_library (fionaclient STATIC fionaclient.cpp)
add_library (httpcookiesession STATIC httpcookiesession.cpp)
add_library (inaudiostream STATIC inaudiostream.cpp)
add_library (outaudiostream STATIC outaudiostream.cpp)
target_link_libraries (conversation fionaclient httpcookiesession inaudiostream outaudiostream curlpp curl avformat avcodec avutil swresample MicrophoneCaller SpeakerCaller DeviceCaller Device soundio Storage EntityConnectionPool LevelStorage jsoncpp leveldb ${GIO-2.0_LIBRARIES})
target_link_libraries (createFionaDbEntry Storage EntityConnectionPool LevelStorage jsoncpp leveldb)
target_include_directories (conversation PUBLIC ${CMAKE_SOURCE_DIR}/org.eclipse.agail.DeviceCaller/src/instance ${CMAKE_SOURCE_DIR}/org.eclipse.agail.IdmEntityStorage/src ${GIO-2.0_INCLUDE_DIRS})
target_include_directories (createFionaDbEntry PUBLIC ${CMAKE_SOURCE_DIR}/org.eclipse.agail.IdmEntityStorage/src)
target_include_directories (fionaclient PUBLIC ${CMAKE_SOURCE_DIR}/org.eclipse.agail.DeviceCaller/src/instance ${GIO-2.0_INCLUDE_DIRS})
target_include_directories (inaudiostream PUBLIC ${CMAKE_SOURCE_DIR}/org.eclipse.agail.DeviceCaller/src/instance ${GIO-2.0_INCLUDE_DIRS})
target_include_directories (outaudiostream PUBLIC ${CMAKE_SOURCE_DIR}/org.eclipse.agail.DeviceCaller/src/instance ${GIO-2.0_INCLUDE_DIRS})
