add_library (DeviceImp STATIC base/DeviceImp.cpp)
add_library (TestDevice STATIC instance/TestDevice.cpp)
target_include_directories (DeviceImp PUBLIC ${GIO-2.0_INCLUDE_DIRS})
target_include_directories (TestDevice PUBLIC ${GIO-2.0_INCLUDE_DIRS})
target_compile_options (DeviceImp PUBLIC ${GIO-2.0_CFLAGS_OTHER})
target_compile_options (TestDevice PUBLIC ${GIO-2.0_CFLAGS_OTHER})

if (BUILD_MICROPHONE)
    add_library (Microphone STATIC instance/Microphone.cpp)
    target_include_directories (Microphone PUBLIC ${GIO-2.0_INCLUDE_DIRS})
    target_compile_options (Microphone PUBLIC ${GIO-2.0_CFLAGS_OTHER})
endif (BUILD_MICROPHONE)

if (BUILD_SPEAKER)
    add_library (Speaker STATIC instance/Speaker.cpp)
    target_include_directories (Speaker PUBLIC ${GIO-2.0_INCLUDE_DIRS})
    target_compile_options (Speaker PUBLIC ${GIO-2.0_CFLAGS_OTHER})
endif (BUILD_SPEAKER)
