add_library (DeviceCaller STATIC base/DeviceCaller.cpp)
add_library (TestDeviceCaller STATIC instance/TestDeviceCaller.cpp)
target_include_directories (DeviceCaller PUBLIC ${GIO-2.0_INCLUDE_DIRS})
target_include_directories (TestDeviceCaller PUBLIC ${GIO-2.0_INCLUDE_DIRS})
target_compile_options (DeviceCaller PUBLIC ${GIO-2.0_CFLAGS_OTHER})
target_compile_options (TestDeviceCaller PUBLIC ${GIO-2.0_CFLAGS_OTHER})

if (BUILD_MICROPHONE)
    add_library (MicrophoneCaller STATIC instance/MicrophoneCaller.cpp)
    target_include_directories (MicrophoneCaller PUBLIC ${GIO-2.0_INCLUDE_DIRS})
    target_compile_options (MicrophoneCaller PUBLIC ${GIO-2.0_CFLAGS_OTHER})
endif (BUILD_MICROPHONE)

if (BUILD_SPEAKER)
    add_library (SpeakerCaller STATIC instance/SpeakerCaller.cpp)
    target_include_directories (SpeakerCaller PUBLIC ${GIO-2.0_INCLUDE_DIRS})
    target_compile_options (SpeakerCaller PUBLIC ${GIO-2.0_CFLAGS_OTHER})
endif (BUILD_SPEAKER)
