add_executable (testServer testServer.cpp)
add_executable (testClient testClient.cpp)
target_link_libraries (testServer TestDevice DeviceImp Device AbstractAgileObject ${GIO-2.0_LIBRARIES})
target_link_libraries (testClient TestDeviceCaller DeviceCaller Device ${GIO-2.0_LIBRARIES})
target_include_directories (testServer PUBLIC ${CMAKE_SOURCE_DIR}/org.eclipse.agail.Device/src/instance  ${GIO-2.0_INCLUDE_DIRS})
target_include_directories (testClient PUBLIC ${CMAKE_SOURCE_DIR}/org.eclipse.agail.DeviceCaller/src/instance  ${GIO-2.0_INCLUDE_DIRS})

if (BUILD_MICROPHONE)
    add_executable (testMicrophoneServer testMicrophoneServer.cpp)
    add_executable (testMicrophoneClient testMicrophoneClient.cpp)
    target_link_libraries (testMicrophoneServer Microphone DeviceImp Device AbstractAgileObject soundio ${GIO-2.0_LIBRARIES})
    target_link_libraries (testMicrophoneClient MicrophoneCaller DeviceCaller Device soundio ${GIO-2.0_LIBRARIES})
    target_include_directories (testMicrophoneServer PUBLIC ${CMAKE_SOURCE_DIR}/org.eclipse.agail.Device/src/instance  ${GIO-2.0_INCLUDE_DIRS})
    target_include_directories (testMicrophoneClient PUBLIC ${CMAKE_SOURCE_DIR}/org.eclipse.agail.DeviceCaller/src/instance  ${GIO-2.0_INCLUDE_DIRS})
endif (BUILD_MICROPHONE)

if (BUILD_SPEAKER)
    add_executable (testSpeakerServer testSpeakerServer.cpp)
    add_executable (testSpeakerClient testSpeakerClient.cpp)
    target_link_libraries (testSpeakerServer Speaker DeviceImp Device AbstractAgileObject soundio ${GIO-2.0_LIBRARIES})
    target_link_libraries (testSpeakerClient SpeakerCaller DeviceCaller Device soundio ${GIO-2.0_LIBRARIES})
    target_include_directories (testSpeakerServer PUBLIC ${CMAKE_SOURCE_DIR}/org.eclipse.agail.Device/src/instance  ${GIO-2.0_INCLUDE_DIRS})
    target_include_directories (testSpeakerClient PUBLIC ${CMAKE_SOURCE_DIR}/org.eclipse.agail.DeviceCaller/src/instance  ${GIO-2.0_INCLUDE_DIRS})
endif (BUILD_SPEAKER)

if (BUILD_MICROPHONE AND BUILD_SPEAKER)
    add_executable (testAudioServer testAudioServer.cpp)
    add_executable (testAudioClient testAudioClient.cpp)
    target_link_libraries (testAudioServer Microphone Speaker DeviceImp Device AbstractAgileObject soundio ${GIO-2.0_LIBRARIES})
    target_link_libraries (testAudioClient MicrophoneCaller SpeakerCaller DeviceCaller Device soundio ${GIO-2.0_LIBRARIES})
    target_include_directories (testAudioServer PUBLIC ${CMAKE_SOURCE_DIR}/org.eclipse.agail.Device/src/instance  ${GIO-2.0_INCLUDE_DIRS})
    target_include_directories (testAudioClient PUBLIC ${CMAKE_SOURCE_DIR}/org.eclipse.agail.DeviceCaller/src/instance  ${GIO-2.0_INCLUDE_DIRS})
endif (BUILD_MICROPHONE AND BUILD_SPEAKER)
